(env
 (static
  (link_flags
   (:standard -ccopt -static)))
 (flambda
  (ocamlopt_flags
   (:standard -O2)))
 (ubsan
  (c_flags
   (:standard -O0 -fno-wrapv -fsanitize=undefined -fno-sanitize-recover=all))
  (link_flags
   (:standard -cclib -fsanitize=undefined))
  (env-vars
   (ALCOTEST_VERBOSE true)
   (UBSAN_OPTIONS print_stacktrace=1))))
