(library
 (name attic)
 (public_name hbt-attic)
 (modules bits belnap belnap_vec)
 (foreign_stubs
  (language c)
  (names belnap_vec_stubs))
 (libraries fmt))

(test
 (name bits_test)
 (modules bits_test)
 (package hbt-attic)
 (libraries alcotest hbt-attic))

(test
 (name belnap_test)
 (modules belnap_test)
 (package hbt-attic)
 (libraries alcotest hbt-attic))

(test
 (name belnap_vec_test)
 (modules belnap_vec_test)
 (package hbt-attic)
 (libraries alcotest hbt-attic qcheck-core qcheck-alcotest))
