(data_only_dirs data templates)

(rule
 (target templates.ml)
 (deps
  (:template templates/netscape_bookmarks.mustache))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:embed} %{template}))))

(rule
 (target version.ml)
 (deps
  (:template version.ml.in)
  (:header project.h))
 (action
  (run
   %{bin:cpp}
   -P
   %{template}
   -o
   %{target}
   %{env:CPP_FLAGS=-D__UNUSED__})))

(library
 (name hbt)
 (public_name hbt-core)
 (libraries
  hbt-prelude
  hbt-pinboard
  cmarkit
  fmt
  markup
  mustache
  semver
  str
  unix
  uri
  yaml)
 (modules collection data entity html markdown templates version))

(test
 (name collection_test)
 (modules collection_test)
 (package hbt-core)
 (libraries alcotest hbt-core uri))

(test
 (name data_test)
 (modules data_test)
 (package hbt-core)
 (libraries alcotest bos fpath hbt-core yaml)
 (deps
  (glob_files data/html/*)
  (glob_files data/markdown/*)
  (glob_files data/pinboard/xml/*)
  (glob_files data/pinboard/json/*))
 (action
  (setenv
   TZ
   UTC
   (run %{test}))))
