(rule
 (deps templates/netscape_bookmarks.mustache)
 (targets templates.ml)
 (action
  (with-stdout-to
   %{targets}
   (run %{dep:gen_template.exe} %{dep:templates/netscape_bookmarks.mustache}))))

(rule
 (target version.ml)
 (deps
  (:template version.ml.in)
  (:header %{workspace_root}/project.h))
 (action
  (run
   cpp
   -include
   %{header}
   %{env:CPP_FLAGS=-D__UNUSED__}
   -P
   %{template}
   -o
   %{target})))

(executable
 (public_name gen-template)
 (name gen_template)
 (package hbt-core)
 (modules gen_template))

(library
 (name hbt)
 (public_name hbt-core)
 (libraries cmarkit ezjsonm markup mustache semver str unix uri xmlm yaml)
 (modules
  collection
  data
  entity
  html
  markdown
  pinboard
  prelude
  templates
  version))
