(rule
 (target templates.ml)
 (deps
  (:template templates/netscape_bookmarks.mustache)
  (:script embed.ml))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ocaml} %{script} %{template}))))

(rule
 (target version.ml)
 (deps
  (:template version.ml.in)
  (:header %{workspace_root}/project.h))
 (action
  (run
   %{bin:cpp}
   -include
   %{header}
   %{env:CPP_FLAGS=-D__UNUSED__}
   -P
   %{template}
   -o
   %{target})))

(library
 (name hbt)
 (public_name hbt-core)
 (libraries
  cmarkit
  ezjsonm
  fmt
  markup
  mustache
  semver
  str
  unix
  uri
  xmlm
  yaml)
 (modules
  collection
  data
  entity
  html
  markdown
  pinboard
  prelude
  templates
  version))
