(rule
 (target templates.ml)
 (deps
  (:template templates/netscape_bookmarks.mustache)
  (:script embed.ml))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ocaml} %{script} %{template}))))

(rule
 (target version.ml)
 (deps
  (:template version.ml.in)
  (:header %{workspace_root}/project.h))
 (action
  (run
   %{bin:cpp}
   -include
   %{header}
   %{env:CPP_FLAGS=-D__UNUSED__}
   -P
   %{template}
   -o
   %{target})))

(library
 (name prelude)
 (public_name hbt-prelude)
 (libraries yaml)
 (modules prelude))

(library
 (name pinboard)
 (public_name hbt-pinboard)
 (libraries hbt-prelude ezjsonm fmt str xmlm yaml)
 (modules pinboard))

(library
 (name hbt)
 (public_name hbt-core)
 (libraries
  hbt-prelude
  hbt-pinboard
  cmarkit
  fmt
  markup
  mustache
  semver
  str
  unix
  uri
  yaml)
 (modules collection data entity html markdown templates version))
