(cram
 (deps %{bin:hbt})
 (package hbt))

(test
 (name collection_test)
 (modules collection_test)
 (package hbt-core)
 (libraries alcotest hbt-core uri))

(executable
 (name gen_html)
 (modules gen_html test_filter))

(subdir
 data/html/run
 (dynamic_include ../generate/dune.inc))

(subdir
 data/html/generate
 (rule
  (deps
   (glob_files ../*.input.html)
   ../../../issues)
  (action
   (with-stdout-to
    dune.inc
    (run ../../../gen_html.exe)))))

(executable
 (name gen_markdown)
 (modules gen_markdown test_filter))

(subdir
 data/markdown/run
 (dynamic_include ../generate/dune.inc))

(subdir
 data/markdown/generate
 (rule
  (deps
   (glob_files ../*.input.md)
   ../../../issues)
  (action
   (with-stdout-to
    dune.inc
    (run ../../../gen_markdown.exe)))))

(executable
 (name gen_pinboard)
 (modules gen_pinboard test_filter))

(subdir
 data/pinboard/run
 (dynamic_include ../generate/dune.inc))

(subdir
 data/pinboard/generate
 (rule
  (deps
   (glob_files ../*.input.xml)
   (glob_files ../*.input.json)
   ../../../issues)
  (action
   (with-stdout-to
    dune.inc
    (run ../../../gen_pinboard.exe)))))
