(data_only_dirs data)

(cram
 (deps %{bin:hbt})
 (package hbt))

(test
 (name test_collection)
 (modules test_collection)
 (package hbt-core)
 (libraries alcotest hbt-core uri))

(test
 (name test_data)
 (modules test_data)
 (libraries alcotest hbt-core yaml fpath bos)
 (deps
  (glob_files data/html/*.input.*)
  (glob_files data/html/*.expected.*)
  (glob_files data/markdown/*.input.*)
  (glob_files data/markdown/*.expected.*)
  (glob_files data/pinboard/xml/*.input.*)
  (glob_files data/pinboard/xml/*.expected.*)
  (glob_files data/pinboard/json/*.input.*)
  (glob_files data/pinboard/json/*.expected.*))
 (action
  (setenv
   TZ
   UTC
   (run %{test}))))
