(data_only_dirs data)

(cram
 (deps %{bin:hbt})
 (package hbt-cli))

(test
 (name test_collection)
 (modules test_collection)
 (package hbt-core)
 (libraries alcotest hbt-core uri))

(test
 (name test_data)
 (modules test_data)
 (package hbt-core)
 (libraries alcotest bos fpath hbt-core yaml)
 (deps
  (glob_files data/html/*)
  (glob_files data/markdown/*)
  (glob_files data/pinboard/xml/*)
  (glob_files data/pinboard/json/*))
 (action
  (setenv
   TZ
   UTC
   (run %{test}))))
